# xgboost-mlflow

./: .env.example  .gitignore  LICENSE  Makefile  README.md  compose.yaml  main.py  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_experiments.ipynb
scripts/data/: __init__.py  download_data.py  preprocessing.py  split_train_test.py  step0_configure_envs.py  step1_download_data.py  step2_preprocessing.py
scripts/mlflow/: __init__.py  models.py  train.py  utils.py
